--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - sudo apt-get install -qq -y python-software-properties
   - sudo apt-add-repository -y ppa:ansible/ansible
   - sudo apt-get update -qq
+install:
   - sudo apt-get install -qq -y python-apt python-pycurl 'ansible=1.8.2-1ppa~precise'
 before_script:
   - echo localhost > inventory
