--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ before_install:
   - sudo apt-get install -qq -y python-software-properties
   - sudo apt-add-repository -y ppa:ansible/ansible
   - sudo apt-get update -qq
+  - sudo apt-get install -qq -y python-apt python-pycurl python-crypto
 install:
-  - sudo apt-get install -qq -y python-apt python-pycurl 'ansible=1.8.2-1ppa~precise'
+  - pip install 'ansible>=1.8.2,<1.9.0'
 before_script:
   - echo localhost > inventory
 script:
